# dovecot-archive

./: LICENSE  README.rst  setup.cfg  setup.py
src/: dovecot_archive.py
tests/: test_dovecot_archive.py
