[metadata]
name = dovecot-archive
version = attr: dovecot_archive.__version__
url = https://github.com/Disassembler0/dovecot-archive
license = BSD-3-Clause
author = Disassembler
author_email = disassembler@dasm.cz
description = A doveadm wrapper for common archival tasks.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Email
    Topic :: Communications :: Email :: Post-Office
    Topic :: System :: Archiving
    Topic :: System :: Systems Administration

[options]
packages = find:
package_dir = = src
py_modules = dovecot_archive
python_requires = >= 3.5
setup_requires = python-dateutil
install_requires = python-dateutil

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dovecot-archive = dovecot_archive:main

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
